# talipapaup-backend

./: .env  Cargo.toml  Dockerfile  README.md  fly.toml
migration/src/: lib.rs  m20250804_005445_categories_table.rs  m20250811_011544_products_table.rs  m20250811_024226_add_product_img_url_in_products_table.rs  m20250819_153433_carts_table.rs
src/: main.rs
src/handlers/: carts.rs  categories.rs  mod.rs  products.rs
src/models/: carts.rs  categories.rs  mod.rs  prelude.rs  products.rs  responses.rs
src/services/: carts.rs  categories.rs  mod.rs  products.rs
src/utils/: common_utils.rs  date_utils.rs  mod.rs
