[package]
name = "talipapaup-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
dotenv = "0.15.0"
colourful-logger = "2.0.1"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
serde_json = "1.0.140"
rust_decimal = "1.37.2"
actix-cors = "0.7.1"
http = "0.2.12"
num-format = "0.4"
shuttle-actix-web = "0.55.0"
shuttle-runtime = "0.55.0"
chrono-tz = "0.10.3"
